--- a/myapp/package.json
+++ b/myapp/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.25.4",
+    "@auth/mongodb-adapter": "^2.0.1",
     "mongodb": "^6.1.0",
     "mongoose": "^7.6.2",
     "next": "13.5.4",
@@ -21,7 +21,6 @@
   },
   "devDependencies": {
     "autoprefixer": "^10",
-    "daisyui": "^3.9.2",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
     "postcss": "^8",
