--- a/myapp/package.json
+++ b/myapp/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^2.0.1",
+    "axios": "^1.5.1",
     "mongodb": "^6.1.0",
     "mongoose": "^7.6.2",
     "next": "13.5.4",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10",
+    "daisyui": "^3.9.2",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
     "postcss": "^8",
