--- a/myapp/package.json
+++ b/myapp/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^2.0.1",
     "axios": "^1.5.1",
+    "easymde": "^2.18.0",
     "mongodb": "^6.1.0",
     "mongoose": "^7.6.2",
     "next": "13.5.4",
@@ -18,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "react-simplemde-editor": "^5.2.0",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
